NetBSD Problem Report #48669

From www@NetBSD.org  Thu Mar 20 16:35:07 2014
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1 with cipher ECDHE-RSA-AES256-SHA (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id DC955A5809
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 20 Mar 2014 16:35:06 +0000 (UTC)
Message-Id: <20140320163505.2FA0EA580B@mollari.NetBSD.org>
Date: Thu, 20 Mar 2014 16:35:05 +0000 (UTC)
From: petri.laakso@asd.fi
Reply-To: petri.laakso@asd.fi
To: gnats-bugs@NetBSD.org
Subject: evbarm/imx23_olinuxino (ARM9E) doesn't boot
X-Send-Pr-Version: www-1.0

>Number:         48669
>Category:       port-evbarm
>Synopsis:       evbarm/imx23_olinuxino (ARM9E) doesn't boot
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    port-evbarm-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Mar 20 16:40:00 +0000 2014
>Closed-Date:    Sun Dec 28 17:07:41 +0000 2014
>Last-Modified:  Sun Dec 28 17:07:41 +0000 2014
>Originator:     Petri Laakso
>Release:        current
>Organization:
>Environment:
>Description:
I was reported problem to me that evbarm/imx23_olinuxino doesn't work.

All user is going to see is endless loop of:

bootimx23: HW revision TA5, boot reason 5V, power source 5V
Enabling 4P2 regulator...done
Enabling 4P2 regulator output to DCDC...done
Enabling VDDMEM...done
Powering VDDD from DCDC...done
Powering VDDA from DCDC...done
Powering VDDIO from DCDC...done
Enabling clocks...done
Configuring pins...done
Configuring EMI...done
Press any key to drop into boot prompt...

NetBSD/evbarm (OLinuXino) booting ...
panic: pmap_map_chunk: no L2 table for VA 0xc0400000

Undefined Instruction
r14_un

>How-To-Repeat:
Try to run evbarm/imx23_olinuxino
>Fix:

>Release-Note:

>Audit-Trail:
From: Petri Laakso <petri.laakso@asd.fi>
To: gnats-bugs@NetBSD.org
Cc: port-evbarm-maintainer@netbsd.org, gnats-admin@netbsd.org,
 netbsd-bugs@netbsd.org
Subject: Re: port-evbarm/48669: evbarm/imx23_olinuxino (ARM9E) doesn't boot
Date: Thu, 20 Mar 2014 19:00:14 +0200

 On Thu, 20 Mar 2014 16:40:00 +0000 (UTC)
 petri.laakso@asd.fi wrote:

 > >Number:         48669
 > >Category:       port-evbarm
 > >Synopsis:       evbarm/imx23_olinuxino (ARM9E) doesn't boot
 > >Confidential:   no
 > >Severity:       serious
 > >Priority:       medium
 > >Responsible:    port-evbarm-maintainer
 > >State:          open
 > >Class:          sw-bug
 > >Submitter-Id:   net
 > >Arrival-Date:   Thu Mar 20 16:40:00 +0000 2014
 > >Originator:     Petri Laakso
 > >Release:        current
 > >Organization:
 > >Environment:
 > >Description:
 > I was reported problem to me that evbarm/imx23_olinuxino doesn't work.
 > 
 > All user is going to see is endless loop of:
 > 
 > bootimx23: HW revision TA5, boot reason 5V, power source 5V
 > Enabling 4P2 regulator...done
 > Enabling 4P2 regulator output to DCDC...done
 > Enabling VDDMEM...done
 > Powering VDDD from DCDC...done
 > Powering VDDA from DCDC...done
 > Powering VDDIO from DCDC...done
 > Enabling clocks...done
 > Configuring pins...done
 > Configuring EMI...done
 > Press any key to drop into boot prompt...
 > 
 > NetBSD/evbarm (OLinuXino) booting ...
 > panic: pmap_map_chunk: no L2 table for VA 0xc0400000
 > 
 > Undefined Instruction
 > r14_un
 > 
 > >How-To-Repeat:
 > Try to run evbarm/imx23_olinuxino
 > >Fix:
 > 

 For debugging purposes I'm using u-boot and kernel image compiled
 with VERBOSE_INIT_ARM, it looks like this:

 ## Booting kernel from Legacy Image at 42000000 ...
    Image Name:   whatever
    Image Type:   ARM NetBSD Kernel Image (uncompressed)
    Data Size:    4275776 Bytes = 4.1 MiB
    Load Address: 40000000
    Entry Point:  40000000
    Verifying Checksum ... OK
    Loading Kernel Image ... OK
 ## Transferring control to NetBSD stage-2 loader (at address 40000000) ...

 NetBSD/evbarm (OLinuXino) booting ...
 boot_args @ c3ffbf00: ''             
 arm32_bootmem_init: memstart=0x40000000, memsize=0x4000000, kernelstart=0x40000000
 arm32_bootmem_init: kernelend=0x40430000                                          
 arm32_bootmem_init: adding 15312 free pages: [0x40430000..0x43ffffff] (VA 0xc0430000)
 arm32_kernel_vm_init: 0 L2 pages are needed to map 0x457000 kernel bytes             
 arm32_kernel_vm_init: allocating page tables for vectoradd_pages: adding pv 0xc0414560 (pa 0x40430000, va 0xc0430000, 4 pages) at tail
 add_pages: appending pv 0xc04146a8 (0x40434000..0x40434fff) to 0x40430000..0x40433fff                                                 
  kernel vmadd_pages: appending pv 0xc04146d0 (0x40435000..0x40435fff) to 0x40430000..0x40434fff
 add_pages: appending pv 0xc04146e4 (0x40436000..0x40436fff) to 0x40430000..0x40435fff          
 add_pages: appending pv 0xc04146f8 (0x40437000..0x40437fff) to 0x40430000..0x40436fff
 add_pages: appending pv 0xc041470c (0x40438000..0x40438fff) to 0x40430000..0x40437fff
 add_pages: appending pv 0xc0414720 (0x40439000..0x40439fff) to 0x40430000..0x40438fff
 add_pages: appending pv 0xc0414734 (0x4043a000..0x4043afff) to 0x40430000..0x40439fff
 add_pages: appending pv 0xc0414748 (0x4043b000..0x4043bfff) to 0x40430000..0x4043afff
 add_pages: appending pv 0xc041475c (0x4043c000..0x4043cfff) to 0x40430000..0x4043bfff
 arm32_kernel_vm_init: allocating stacks                                              
 add_pages: adding pv 0xc041454c (pa 0x4043d000, va 0xc043d000, 1 pages) at tail
 add_pages: appending pv 0xc0414a00 (0x4043e000..0x4043efff) to 0x4043d000..0x4043dfff
     compile  IMX23_OLINUXINO/syscall.o
     compile  IMX23_OLINUXINO/undefined.o
 add_pages: appending pv 0xc04149ec (0x4043f000..0x4043ffff) to 0x4043d000..0x4043efff
 add_pages: appending pv 0xc04149d8 (0x40440000..0x40440fff) to 0x4043d000..0x4043ffff
 add_pages: appending pv 0xc04149c4 (0x40441000..0x40442fff) to 0x4043d000..0x40440fff
 add_pages: appending pv 0xc0414a28 (0x40443000..0x40444fff) to 0x4043d000..0x40442fff
 add_pages: appending pv 0xc0414598 (0x40445000..0x40448fff) to 0x4043d000..0x40444fff
 Creating L1 page table at 0x40430000
 arm32_kernel_vm_init: adding L2 pt (VA 0xc0434000, PA 0x40434000) for VA 0xffff0000
  (vectors)arm32_kernel_vm_init: adding L2 pt (VA 0xc0435000, PA 0x40435000) for VA 0xc8000000 (vm)
 arm32_kernel_vm_init: adding L2 pt (VA 0xc0436000, PA 0x40436000) for VA 0xc8400000 (vm)
 arm32_kernel_vm_init: adding L2 pt (VA 0xc0437000, PA 0x40437000) for VA 0xc8800000 (vm)
 arm32_kernel_vm_init: adding L2 pt (VA 0xc0438000, PA 0x40438000) for VA 0xc8c00000 (vm)
 arm32_kernel_vm_init: adding L2 pt (VA 0xc0439000, PA 0x40439000) for VA 0xc9000000 (vm)
 arm32_kernel_vm_init: adding L2 pt (VA 0xc043a000, PA 0x4043a000) for VA 0xc9400000 (vm)
 arm32_kernel_vm_init: adding L2 pt (VA 0xc043b000, PA 0x4043b000) for VA 0xc9800000 (vm)
 arm32_kernel_vm_init: adding L2 pt (VA 0xc043c000, PA 0x4043c000) for VA 0xc9c00000 (vm)
 Mapping kernel
 arm32_kernel_vm_init: adding chunk for kernel text 0x40000000..0x40310fff (VA 0xc0000000)
 add_pages: adding pv 0xc0414538 (pa 0x40000000, va 0xc0000000, 785 pages) before pa 0x40430000
 arm32_kernel_vm_init: adding chunk for kernel data/bss 0x40311000..0x4042ffff (VA 0xc0311000)
 add_pages: appending pv 0xc04145c0 (0x40311000..0x4042ffff) to 0x40000000..0x40310fff
 Listing Chunks
 arm32_kernel_vm_init: pv 0xc0414538: chunk VA 0xc0000000..0xc042ffff (PA 0x40000000, prot 3, cache 1)
 arm32_kernel_vm_init: pv 0xc0414560: chunk VA 0xc0430000..0xc043cfff (PA 0x40430000, prot 3, cache 2)
 arm32_kernel_vm_init: pv 0xc041454c: chunk VA 0xc043d000..0xc0448fff (PA 0x4043d000, prot 3, cache 1)

 Mapping Chunks
 arm32_kernel_vm_init: mapping chunk VA 0xc0000000..0xc042ffff (PA 0x40000000, prot 3, cache 1)
 pmap_map_chunk: pa=0x40000000 va=0xc0000000 size=0x430000 resid=0x430000 prot=0x3 cache=1
 SSSSpanic: pmap_map_chunk: no L2 table for VA 0xc0400000
 undefined instruction
 pc : [<c003a00c>]          lr : [<c01b996c>]
 sp : c0414338  ip : c0414338     fp : c0414364
 r10: c0427810  r9 : c0414384     r8 : c0426c5c
 r7 : 00000104  r6 : c02da3e0     r5 : c0427810  r4 : c042782c
 r3 : 00000001  r2 : 00000000     r1 : 80070000  r0 : 00000001
 Flags: nZCv  IRQs off  FIQs off  Mode SVC_32
 Resetting CPU ...

 resetting ...

From: Petri Laakso <petri.laakso@asd.fi>
To: gnats-bugs@NetBSD.org
Cc: port-evbarm-maintainer@netbsd.org, gnats-admin@netbsd.org,
 netbsd-bugs@netbsd.org
Subject: Re: port-evbarm/48669: evbarm/imx23_olinuxino (ARM9E) doesn't boot
Date: Thu, 20 Mar 2014 19:59:59 +0200

 On Thu, 20 Mar 2014 16:40:00 +0000 (UTC)
 petri.laakso@asd.fi wrote:

 > >Number:         48669
 > >Category:       port-evbarm
 > >Synopsis:       evbarm/imx23_olinuxino (ARM9E) doesn't boot
 > >Confidential:   no
 > >Severity:       serious
 > >Priority:       medium
 > >Responsible:    port-evbarm-maintainer
 > >State:          open
 > >Class:          sw-bug
 > >Submitter-Id:   net
 > >Arrival-Date:   Thu Mar 20 16:40:00 +0000 2014
 > >Originator:     Petri Laakso
 > >Release:        current
 > >Organization:
 > >Environment:
 > >Description:
 > I was reported problem to me that evbarm/imx23_olinuxino doesn't work.
 > 
 > All user is going to see is endless loop of:
 > 
 > bootimx23: HW revision TA5, boot reason 5V, power source 5V
 > Enabling 4P2 regulator...done
 > Enabling 4P2 regulator output to DCDC...done
 > Enabling VDDMEM...done
 > Powering VDDD from DCDC...done
 > Powering VDDA from DCDC...done
 > Powering VDDIO from DCDC...done
 > Enabling clocks...done
 > Configuring pins...done
 > Configuring EMI...done
 > Press any key to drop into boot prompt...
 > 
 > NetBSD/evbarm (OLinuXino) booting ...
 > panic: pmap_map_chunk: no L2 table for VA 0xc0400000
 > 
 > Undefined Instruction
 > r14_un
 > 
 > >How-To-Repeat:
 > Try to run evbarm/imx23_olinuxino
 > >Fix:
 > 

 System started to boot again when I reverted from 1.24 to 1.22.
 src/sys/arch/arm/arm32/arm32_kvminit.c so problem lies somewhere
 around there.

 Petri


From: Petri Laakso <petri.laakso@asd.fi>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: port-evbarm/48669
Date: Wed, 29 Oct 2014 11:17:08 +0200 (EET)

 Hi

 evbarm/imx23_olinuxino boots again without panic if following patch
 is applied. Can someone please apply this?

 >Fix:

 +++ sys/arch/evbarm/imx23_olinuxino/imx23_olinuxino_machdep.c	28 Oct 2014 18:35:26 -0000
 @@ -179,7 +179,7 @@
               ((vsize_t)&KERNEL_BASE_phys));

           arm32_kernel_vm_init(KERNEL_VM_BASE, ARM_VECTORS_HIGH, 0, devmap,
 -	    true);
 +	    false);

           return initarm_common(KERNEL_VM_BASE, KERNEL_VM_SIZE, NULL, 0);
   }

From: "Nick Hudson" <skrll@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/48669 CVS commit: src/sys/arch/evbarm/imx23_olinuxino
Date: Wed, 29 Oct 2014 11:21:51 +0000

 Module Name:	src
 Committed By:	skrll
 Date:		Wed Oct 29 11:21:51 UTC 2014

 Modified Files:
 	src/sys/arch/evbarm/imx23_olinuxino: imx23_olinuxino_machdep.c

 Log Message:
 PR/48669 evbarm/imx23_olinuxino (ARM9E) doesn't boot.

 Don't try to map all memory and fix booting.


 To generate a diff of this commit:
 cvs rdiff -u -r1.3 -r1.4 \
     src/sys/arch/evbarm/imx23_olinuxino/imx23_olinuxino_machdep.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/48669 CVS commit: [netbsd-7] src/sys/arch/evbarm/imx23_olinuxino
Date: Thu, 30 Oct 2014 12:35:21 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Thu Oct 30 12:35:21 UTC 2014

 Modified Files:
 	src/sys/arch/evbarm/imx23_olinuxino [netbsd-7]:
 	    imx23_olinuxino_machdep.c

 Log Message:
 Pull up following revision(s) (requested by skrll in ticket #169):
 	sys/arch/evbarm/imx23_olinuxino/imx23_olinuxino_machdep.c: revision 1.4
 PR/48669 evbarm/imx23_olinuxino (ARM9E) doesn't boot.
 Don't try to map all memory and fix booting.


 To generate a diff of this commit:
 cvs rdiff -u -r1.3 -r1.3.4.1 \
     src/sys/arch/evbarm/imx23_olinuxino/imx23_olinuxino_machdep.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sat, 27 Dec 2014 23:11:01 +0000
State-Changed-Why:
Is this fixed?


State-Changed-From-To: feedback->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sun, 28 Dec 2014 17:07:41 +0000
State-Changed-Why:
Confirmed fixed, thanks.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.