Pull up following revision(s) (requested by skrll in ticket #169): 	sys/arch/evbarm/imx23_olinuxino/imx23_olinuxino_machdep.c: revision 1.4 PR/48669 evbarm/imx23_olinuxino (ARM9E) doesn't boot. Don't try to map all memory and fix booting.